Buttons: remove borders and drop shadows. Adjust radius.

--- a/src/styles/all.less
+++ b/src/styles/all.less
@@ -9,6 +9,7 @@
 @import "avatars.less";
 @import "badges.less";
 @import "buttons.less";
+@import "button-groups.less";
 @import "bar.less";
 @import "close.less";
 @import "dropdowns.less";
