--- a/src/styles/pager.less
+++ b/src/styles/pager.less
@@ -15,6 +15,7 @@
     // Cancel out some of Bootstrap Pager's <a> and <span> styles when we're using a button class.
     > .btn {
       padding: 0 @padding-base-horizontal;
+      border: 0;
     }
     > .btn-default {
       .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border);
