--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -152,7 +152,7 @@
 
 @input-color:                   @gray-darker;
 @input-border:                  @gray-light;
-@input-border-radius:           3px;
+@input-border-radius:           @border-radius-small;
 @input-border-focus:            @blue;
 
 @input-height-base:             (@line-height-computed + (@padding-base-vertical * 2) + 2);
