Change dropdown hover bg from blue to grey

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -279,8 +279,8 @@
 // -------------------------
 @dropdown-bg:                    #fff;
 @dropdown-border:                transparent;
-@dropdown-link-hover-color:      #FFFFFF;
-@dropdown-link-hover-bg:         @blue;
+@dropdown-link-hover-color:      @gray-dark;
+@dropdown-link-hover-bg:         @gray-lighter;
 
 // Modals
 // -------------------------
