--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -24,19 +24,19 @@
 @red:           #d63960;
 @storify-blue:  #3A98D9;
 
-@purple-dark:   darken(@purple, 15%);
-@blue-dark:     darken(@blue, 15%);
-@green-dark:    darken(@green, 15%);
-@yellow-dark:   darken(@yellow, 15%);
-@orange-dark:   darken(@orange, 15%);
-@red-dark:      darken(@red, 15%);
+@purple-dark:   darken(@purple, 15%);   // #4f4879
+@blue-dark:     darken(@blue, 15%);     // #0a6aa4
+@green-dark:    darken(@green, 15%);    // #3ba15e
+@yellow-dark:   darken(@yellow, 15%);   // #eb9101
+@orange-dark:   darken(@orange, 15%);   // #c03519
+@red-dark:      darken(@red, 15%);      // #a12141
 
-@purple-light:  lighten(@purple, 15%);
-@blue-light:    lighten(@blue, 15%);
-@green-light:   lighten(@green, 15%);
-@yellow-light:  lighten(@yellow, 15%);
-@orange-light:  lighten(@orange, 15%);
-@red-light:     lighten(@red, 15%);
+@purple-light:  lighten(@purple, 15%);  // #9e98c2
+@blue-light:    lighten(@blue, 15%);    // #53b7f4
+@green-light:   lighten(@green, 15%);   // #9bdab1
+@yellow-light:  lighten(@yellow, 15%);  // #fed187
+@orange-light:  lighten(@orange, 15%);  // #ef9583
+@red-light:     lighten(@red, 15%);     // #e37893
 
 // Common Social Media Colors
 // -------------------------
