Shrink default button text size

--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -9,6 +9,7 @@
 .btn {
   // Using fixed heights and line-heights instead of padding to improve vertically centering fycons inside buttons
   padding: 0 @padding-base-horizontal;
+  font-size: @font-size-small;
   height: @btn-height;
   line-height: @btn-height;
   border: 0;
