Dropdown header color

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -281,6 +281,7 @@
 @dropdown-border:                transparent;
 @dropdown-link-hover-color:      @gray-dark;
 @dropdown-link-hover-bg:         @gray-lighter;
+@dropdown-header-color:          @gray;
 
 // Modals
 // -------------------------
