Update panel styles

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -329,6 +329,18 @@
 @close-color:                   @gray;
 @close-height:                  32px;
 
+// Panels
+// -------------------------
+@panel-body-padding:          17px;
+@panel-heading-padding:       19px 17px;
+@panel-border-radius:         @border-radius-small;
+
+@panel-inner-border:          @gray-light;
+
+@panel-default-text:          @gray-darkest;
+@panel-default-border:        @gray;
+@panel-default-heading-bg:    #fff;
+
 // Slats
 // -------------------------
 @slat-height:                   60px;
