--- a/src/styles/no-data.less
+++ b/src/styles/no-data.less
@@ -5,8 +5,9 @@
 // --------------------------------------------------
 
 .no-data {
-    padding: 60px (@grid-gutter-width / 2) 30px;
+    padding: 120px (@grid-gutter-width / 2) 240px;
     text-align: center;
+    background-color: @gray-lighter;
 
     // Large Fycon
     [class^="fycon-"],
@@ -15,17 +16,17 @@
         margin: 0 auto 16px;
         font-size: 90px;
         line-height: 1;
-        color: @gray-light;
+        color: @gray;
     }
     
     // Header
     .no-data-header {
         max-width: 560px;
         margin: 0 auto 10px;
-        font-size: 24px;
-        font-weight: 600;
-        line-height: 30px;
-        color: @gray-dark;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 24px;
+        color: @gray-darkest;
     }
     
     // Subheader, buttons, links, etc.
@@ -34,6 +35,6 @@
         margin: 0 auto 16px;
         font-size: @font-size-base;
         line-height: 18px;
-        color: @gray;
+        color: @gray-darkish;
     }
 }
