Update default labels with S2 styles

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -209,7 +209,7 @@
 // Labels
 // -------------------------
 @label-color:                   #ffffff;
-@label-default-bg:          @gray-lighter;
+@label-default-bg:          #E5ECF2; // Very light blue
 @label-primary-bg:          @orange;
 @label-success-bg:          @green;
 @label-info-bg:           @blue;
