--- a/src/styles/labels.less
+++ b/src/styles/labels.less
@@ -2,22 +2,26 @@
 @import (reference) "./mixins";
 
 .label {
-  padding: 0.2em 0.5em;
-  font-size: 0.714em;
+  padding: 0.2em 0.5em 0.1em;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  border-radius: @border-radius-small;
 }
 
 .label-md {
+  padding: 0.2em 0.5em;
 	font-size: 1em;
 }
 
 .label-lg {
+  padding: 0.4em 0.5em;
 	font-size: 1em;
-	padding: 0.4em 0.5em;
 }
 
 .label-xl { 
+  padding: 0.5em 0.8em;
 	font-size: 1.143em;
-	padding: 0.5em 0.8em;
 }
 
 .label-default {
