Add action-etc-vertical and search-happy fycons. Update search and plus fycons.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -5,6 +5,9 @@
 .fycon-action-etc {
   &:before { content: "\e000"; }
 }
+.fycon-action-etc-vertical {
+  &:before { content: "\e0b5"; }
+}
 .fycon-action-favorite {
   &:before { content: "\e001"; }
 }
@@ -64,6 +67,9 @@
 }
 .fycon-arrow-back {
   &:before { content: "\e014"; }
+}
+.fycon-arrow-btn-picker {
+  &:before { content: "\e0b7"; }
 }
 .fycon-arrow-down {
   &:before { content: "\e015"; }
@@ -400,6 +406,9 @@
 }
 .fycon-search {
   &:before { content: "\e080"; }
+}
+.fycon-search-happy {
+  &:before { content: "\e0b6"; }
 }
 .fycon-settings-admin {
   &:before { content: "\e081"; }
