Fycons: Adjust default sm and lg styles. Update button styles with new fycon sizes.

--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -122,18 +122,6 @@
   }
 }
 
-.btn {
-  .fycon-xs {
-    font-size: @font-size-base - 4px;
-  }
-  .fycon-sm {
-    font-size: @font-size-base - 2px;
-  }
-  .fycon-lg {
-    font-size: @font-size-base + 2px;
-  }
-}
-
 .btn-xs, 
 .btn-sm {
   .fycon-xs {
@@ -144,6 +132,9 @@
   }
   .fycon-lg {
     font-size: @font-size-small + 2px;
+  }
+  .fycon-xl {
+    font-size: @font-size-small + 4px;
   }
 }
 
@@ -156,5 +147,8 @@
   }
   .fycon-lg {
     font-size: @font-size-large + 4px;
+  }
+  .fycon-xl {
+    font-size: @font-size-large + 8px;
   }
 }
