--- a/src/styles/fycon-styles.less
+++ b/src/styles/fycon-styles.less
@@ -18,12 +18,20 @@
     .fycons-styles-base();
   }
 
-  .fycon-lg {
-    font-size: 2em;
+  .fycon-xs {
+    font-size: @font-size-base - 4px;
   }
 
   .fycon-sm {
-    font-size: 0.5em;
+    font-size: @font-size-base - 2px;
+  }
+
+  .fycon-lg {
+    font-size: @font-size-base + 2px;
+  }
+
+  .fycon-xl {
+    font-size: @font-size-base + 4px;
   }
 
   .fycon-inherit {
