--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -287,13 +287,13 @@
 // -------------------------
 @modal-header-bg:             #F4F5F5;
 @modal-header-border-color:   #ECECEA;
-@modal-inner-padding:         30px;
+@modal-inner-padding:         24px;
 @modal-title-padding:         28px;
 @modal-backdrop-bg:           #000;
 @modal-backdrop-opacity:      .7;
 @modal-content-fallback-border-color: #999;
-@modal-title-font-size:       ceil(@font-size-base * 1.42857); // 20px
-@modal-title-line-height:     24px;
+@modal-title-font-size:       @font-size-base;
+@modal-title-line-height:     20px;
 @modal-content-bg:            #fff;
 @modal-content-border-color:  rgba(0,0,0,.2);
 @modal-header-border-color:   #e5e5e5;
@@ -326,8 +326,8 @@
 
 // Close
 // -------------------------
-@close-color:                   @gray;
-@close-height:                  32px;
+@close-color:                   @gray-darkish;
+@close-height:                  30px;
 
 // Panels
 // -------------------------
