Fix issue with lessc not compiling correctly

--- a/src/styles/all.less
+++ b/src/styles/all.less
@@ -1,4 +1,8 @@
-@bootstrap-less: "/lib/bootstrap/less/";
+@bootstrap-less: "/lib/bootstrap/less";
+
+@import (reference) "./mixins";
+@import (reference) "./variables";
+
 @import "@{bootstrap-less}/bootstrap";
 
 /**
