--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -176,6 +176,9 @@
 .fycon-film {
   &:before { content: "\e036"; }
 }
+.fycon-folder {
+  &:before { content: "\e0b1"; }
+}
 .fycon-form-checkbox-active {
   &:before { content: "\e037"; }
 }
