--- a/src/styles/modals.less
+++ b/src/styles/modals.less
@@ -66,6 +66,16 @@
   padding: 16px @modal-inner-padding @modal-inner-padding;
   color: @gray-darker;
 
+  section {
+    margin-bottom: 18px;
+    padding: 18px;
+    background: @gray-lightest;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
   h4 {
     margin-top: 0;
     margin-bottom: 0.4em;
