--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -279,9 +279,10 @@
 // -------------------------
 @dropdown-bg:                    #fff;
 @dropdown-border:                transparent;
-@dropdown-link-hover-color:      @gray-dark;
+@dropdown-link-color:            @gray-darkest;
+@dropdown-link-hover-color:      @gray-darkest;
 @dropdown-link-hover-bg:         @gray-lighter;
-@dropdown-header-color:          @gray;
+@dropdown-header-color:          @gray-darkish;
 
 // Modals
 // -------------------------
