Add fycons for crop and all assets.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -53,6 +53,9 @@
 .fycon-alert {
   &:before { content: "\e010"; }
 }
+.fycon-all-assets {
+  &:before { content: "\e0b2"; }
+}
 .fycon-analytics {
   &:before { content: "\e011"; }
 }
@@ -136,6 +139,9 @@
 }
 .fycon-copy-to-clipboard {
   &:before { content: "\e02b"; }
+}
+.fycon-crop {
+  &:before { content: "\e0b3"; }
 }
 .fycon-download {
   &:before { content: "\e02c"; }
