New fycons for folder-private and folder-restricted.

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -179,6 +179,12 @@
 .fycon-folder {
   &:before { content: "\e0b1"; }
 }
+.fycon-folder-private {
+  &:before { content: "\e0b4"; }
+}
+.fycon-folder-restricted {
+  &:before { content: "\e0b8"; }
+}
 .fycon-form-checkbox-active {
   &:before { content: "\e037"; }
 }
