Rough draft of 2.0.0 page

--- a/css/docs.css
+++ b/css/docs.css
@@ -107,19 +107,29 @@ h1.section-header {
   color: #2f3440;
   font-size: 2.5em;
 }
-section p {
+section > div > p,
+section > div > ul,
+section > div > ol {
   font-size: 1.333em;
   line-height: 1.75;
   color: #5a647b;
 }
-p.descrip {
+section > div > p li,
+section > div > ul li,
+section > div > ol li {
+  margin-bottom: 5px;
+}
+p.descrip,
+ul.descrip {
   font-size: 1.1rem;
   line-height: 1.5;
   margin-bottom: 14px;
 }
 .glossary {
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 200px;
-  float: right;
 }
 .glossary-list {
   width: 200px;
@@ -220,4 +230,21 @@ p.descrip {
   margin-right: 10px;
   text-align: right;
   color: #bebec5;
+}
+.css-mapping span {
+  margin: 0;
+  margin-right: 10px;
+  height: 50px;
+  width: 50px;
+  color: #162a36 !important;
+  overflow: hidden;
+  float: left;
+  font-size: 24px;
+  text-align: center;
+}
+.color-swatch {
+  width: 100%;
+  margin-bottom: 5px;
+  padding-top: 100%;
+  border-radius: 2px;
 }
