--- a/css/docs.less
+++ b/css/docs.less
@@ -19,12 +19,14 @@ html, body {
 }
 
 .container {
-  max-width: 1120px;
-  margin: 0 auto; padding: 0;
+  //max-width: 1120px;
+  max-width: 100%;
+  margin: 0 auto; 
+  padding: 0;
   position: relative;
 
   &.slim {
-    max-width: 880px;
+    //max-width: 880px;
     margin: 0; padding: 0;
   }
 
@@ -33,6 +35,7 @@ html, body {
     padding-bottom: 20px;
   }
 }
+
 
 .menu {
   width: 100%;
@@ -91,6 +94,7 @@ html, body {
 .hero {
   background: @lf-gray;
   margin-top: 29px;
+  margin-bottom: 20px;
   padding: 30px 10px 50px;
   color: #fff;
 
@@ -112,18 +116,12 @@ html, body {
 }
 
 section {
-  margin-bottom: 10px;
-}
+  margin-bottom: 60px;
 
-h1.section-header {
-  padding-bottom: 14px;
-  margin-bottom: 16px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  color: @lf-gray;
-  font-size: 2.5em;
-}
+  > h3 {
+    margin-top: 30px;
+  }
 
-section > div {
   > p,
   > ul,
   > ol {
@@ -144,30 +142,40 @@ ul.descrip {
   margin-bottom: 14px;
 }
 
+h1.section-header {
+  margin-bottom: 16px;
+  padding-bottom: 14px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  color: @lf-gray;
+  font-size: 2.5em;
+}
+
 .glossary {
-  position: absolute;
-  top: 0;
-  right: 0;
+  position: relative;
   width: 200px;
+
+  @media (min-width: 990px) {
+    &.affix-top {
+      margin-top: 40px;
+    }
+
+    &.affix {
+      position: fixed;
+      top: 60px;
+    }
+  }
 }
 
 .glossary-list {
-  width: 200px;
   list-style-type: none;
-  margin: 0; padding: 0;
-
-  &.affix-top {
-    margin-top: 40px;
-  }
-
-  &.affix {
-    top: 60px;
-  }
+  margin: 0; 
+  padding: 0;
 }
 
 .glossary-list li {
   margin: 0;
-  padding: 8px 10px;
+  padding: 6px 10px;
+  font-size: 12px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 0;
 
