--- a/css/docs.less
+++ b/css/docs.less
@@ -135,7 +135,16 @@ section {
   }
 }
 
-.panel {
+.panel-group {
+  .panel-heading {
+    padding: 0;
+  }
+
+  .panel-title a {
+    display: block;
+    padding: 19px 17px;
+  }
+
   p,
   ul,
   ol {
