--- a/css/docs.css
+++ b/css/docs.css
@@ -97,9 +97,6 @@ body {
   font-size: 1.25em;
   color: rgba(255, 255, 255, 0.6);
 }
-section {
-  margin-bottom: 60px;
-}
 section > h3 {
   margin-top: 30px;
 }
@@ -114,6 +111,9 @@ section > p li,
 section > ul li,
 section > ol li {
   margin-bottom: 5px;
+}
+.content {
+  margin-bottom: 60px;
 }
 .panel-group .panel-heading {
   padding: 0;
@@ -140,8 +140,10 @@ ul.descrip {
   line-height: 1.5;
   margin-bottom: 14px;
 }
-h1.section-header {
+.content h1.section-header {
+  margin-top: 0;
   margin-bottom: 16px;
+  padding-top: 60px;
   padding-bottom: 14px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   color: #2f3440;
