Fix slide down animation

--- a/css/docs.less
+++ b/css/docs.less
@@ -311,6 +311,9 @@ ul.descrip {
   margin-top: -3.5em;
 }
 
-.collapse h3 {
-  margin-top: 0;
+.collapse,
+.collapsing {
+  h3 {
+    margin-top: 0;
+  }
 }
