Designer logo fycon

--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -314,6 +314,9 @@
 .fycon-logo-counter {
   &:before { content: "\e05f"; }
 }
+.fycon-logo-designer {
+  &:before { content: "\e0b9"; }
+}
 .fycon-logo-developers {
   &:before { content: "\e060"; }
 }
