Fix inline radio and inline checkboxes.

--- a/src/styles/forms.less
+++ b/src/styles/forms.less
@@ -30,14 +30,12 @@
 
 // Checkboxes and radios
 // - Uses fycons instead of browser styles
-.checkbox,
-.radio,
-.checkbox-inline,
-.radio-inline {
-  label {
-    padding-left: 26px;
-    color: @gray-darker;
-  }
+.checkbox label
+.radio label
+label.checkbox-inline,
+label.radio-inline {
+  padding-left: 26px;
+  color: @gray-darker;
 
   input[type="checkbox"],
   input[type="radio"] {
