--- a/src/styles/modals.less
+++ b/src/styles/modals.less
@@ -81,6 +81,7 @@
     margin-top: 0;
     margin-bottom: 0.4em;
     font-size: 20px;
+    font-weight: @headings-font-weight;
     line-height: 30px;
     color: @gray-darkest;
   }
