--- a/src/styles/fycon-chars.less
+++ b/src/styles/fycon-chars.less
@@ -143,6 +143,9 @@
 .fycon-crop {
   &:before { content: "\e0b3"; }
 }
+.fycon-discover {
+  &:before { content: "\e0ba"; }
+}
 .fycon-download {
   &:before { content: "\e02c"; }
 }
