--- a/src/styles/slats.less
+++ b/src/styles/slats.less
@@ -34,12 +34,12 @@
 }
 
 .slat-vertical-center {
-  .transform-style(preserve-3d); // Works with .vertical-center helper
-  padding: (@slat-padding - 2) 0 (@slat-padding + 2);
+  display: flex;
+  align-items: center;
+  padding: 0;
 
-  > div {
-    .vertical-center();
-  }
+  display: -ms-flexbox;
+  -ms-flex-align: center;
 }
 
 
