--- a/src/styles/slats.less
+++ b/src/styles/slats.less
@@ -34,12 +34,13 @@
 }
 
 .slat-vertical-center {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: 0;
-
-  display: -ms-flexbox;
-  -ms-flex-align: center;
 }
 
 
