--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -331,16 +331,20 @@
 // Slats
 // -------------------------
 @slat-height:                   60px;
-@slat-padding:                  10px;
-@slat-border-color:             @gray-lighter;
+@slat-padding:                  18px;
+@slat-border-color:             @gray-light;
+@slat-bg-color:                 #fff;
 @slat-bg-hover-color:           @gray-lighter;
 @slat-line-height:              18px;
+@slat-font-size:                @font-size-small;
 @slat-font-color:               @gray-dark;
-@slat-header-height:            36px;
-@slat-header-font-size:         11px;
-@slat-header-font-color:        @gray;
-@slat-title-size:               @font-size-base;
-@slat-title-color:              @gray-darker;
+@slat-font-hover-color:         @gray-darkest;
+@slat-header-height:            42px;
+@slat-header-font-size:         @font-size-small;
+@slat-header-font-color:        @gray-dark;
+@slat-header-line-height:       18px;
+@slat-title-size:               16px;
+@slat-title-color:              @gray-darkest;
 
 
 // Toggles
