Slats: Unbold titles.

--- a/src/styles/slats.less
+++ b/src/styles/slats.less
@@ -80,7 +80,7 @@
   display: inline-block; // Use inline-block on all slat content to help their baselines align.
   margin: 0;
   font-size: @slat-title-size;
-  font-weight: @headings-font-weight;
+  font-weight: normal;
   line-height: @slat-line-height;
   color: @slat-title-color;
 }
