Add line-height variable for Slats title.

--- a/src/styles/slats.less
+++ b/src/styles/slats.less
@@ -81,7 +81,7 @@
   margin: 0;
   font-size: @slat-title-size;
   font-weight: normal;
-  line-height: @slat-line-height;
+  line-height: @slat-title-line-height;
   color: @slat-title-color;
 }
 
