--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -344,6 +344,7 @@
 @slat-header-font-color:        @gray-dark;
 @slat-header-line-height:       18px;
 @slat-title-size:               16px;
+@slat-title-line-height:        20px; // Higher than 18px or else cuts off descenders
 @slat-title-color:              @gray-darkest;
 
 
