New tabs styles.

--- a/src/styles/all.less
+++ b/src/styles/all.less
@@ -25,6 +25,7 @@
 @import "modals.less";
 @import "no-data.less";
 @import "navbar.less";
+@import "navs.less";
 @import "pager.less";
 @import "popovers.less";
 @import "sidebar.less";
