--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -125,6 +125,21 @@
 @navbar-default-brand-hover-color: darken(@navbar-default-brand-color, 10%);
 @navbar-default-brand-hover-bg:    transparent;
 
+
+// Tabs
+// -------------------------
+@nav-tabs-border-color:                       transparent;
+
+@nav-tabs-link-hover-border-color:            transparent;
+
+@nav-tabs-active-link-hover-bg:               transparent;
+@nav-tabs-active-link-hover-color:            @gray-darkest;
+@nav-tabs-active-link-hover-border-color:     @orange;
+
+@nav-tabs-justified-link-border-color:        transparent;
+@nav-tabs-justified-active-link-border-color: @orange;
+
+
 // Form states and alerts
 // -------------------------
 
