Adjust tabs padding.

--- a/src/styles/navs.less
+++ b/src/styles/navs.less
@@ -15,7 +15,7 @@
 
     > a {
       margin-right: @grid-gutter-width;
-      padding: 12px 0;
+      padding: 8px 0 12px;
       font-size: @font-size-large;
       line-height: ceil((@font-size-large * 1.2)); // ~22px
       color: @gray-dark;
@@ -42,7 +42,7 @@
 
 .nav-tabs-sm {
   > li > a {
-    padding: 8px 0;
+    padding: 6px 0 8px;
     font-size: @font-size-base;
     line-height: @line-height-base;
   }
