Slats: Adjust slat title styles to match new Streams designs.

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -358,9 +358,9 @@
 @slat-header-font-size:         @font-size-small;
 @slat-header-font-color:        @gray-dark;
 @slat-header-line-height:       18px;
-@slat-title-size:               16px;
-@slat-title-line-height:        20px; // Higher than 18px or else cuts off descenders
-@slat-title-color:              @gray-darkest;
+@slat-title-size:               14px;
+@slat-title-line-height:        18px;
+@slat-title-color:              @gray-darker;
 
 
 // Toggles
