Slats: Add letter spacing to slats headers.

--- a/src/styles/slats.less
+++ b/src/styles/slats.less
@@ -41,6 +41,7 @@
   font-weight: @headings-font-weight;
   line-height: @slat-header-line-height;
   text-transform: uppercase;
+  letter-spacing: 0.083333em;
   color: @slat-header-font-color;
   cursor: auto;
 
